# CACHE

./: .gitignore  CACHE.sln  CMakeLists.txt  Optimizations  README.md
CACHE/: CACHE.vcxproj  CACHE.vcxproj.filters  CMakeLists.txt  Cache.cpp  Cache.h  ConsoleLogger.cpp  ConsoleLogger.h  DistributionGenerator.cpp  DistributionGenerator.h  Flow.cpp  Flow.h  Generator.cpp  Generator.h  Lru.cpp  Lru.h  Main.cpp  Pareto.cpp  Pareto.h  PartitionedCache.cpp  PartitionedCache.h  Request.cpp  Request.h  StackDistFlow.cpp  StackDistFlow.h  TraceFileFlow.cpp  TraceFileFlow.h  Utils.cpp
CACHE/Caches/: Cache.h  Lru.cpp  Lru.h
CACHE/Flows/: Flow.h  TraceFileFlow.cpp  TraceFileFlow.h
CACHE/Generators/: Pareto.cpp  Pareto.h  Request.cpp  Request.h
CACHE/Loggers/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  Logger.h
CACHE/Utils/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  Logger.cpp  Logger.h  Plot.cpp  Plot.h  Types.h  Utils.cpp  Utils.h
Cache/: CMakeLists.txt  Config.xml  Main.cpp
Cache/Algorithms/: Algorithm.cpp  Algorithm.h  DynamicPartial.cpp  DynamicPartial.h  SharedCache.cpp  SharedCache.h  StaticPartial.cpp  StaticPartial.h
Cache/Caches/: Cache.cpp  Cache.h  Lru.cpp  Lru.h
Cache/Clients/: Client.cpp  Client.h  ClientsManager.cpp  ClientsManager.h
Cache/Configs/: Analyze.xml  Config.xml  Generate.xml  Simulate.xml
Cache/Flows/: Flow.cpp  Flow.h  StackDistFlow.cpp  StackDistFlow.h  TraceFileFlow.cpp  TraceFileFlow.h
Cache/Generators/: ChiSquare.cpp  ChiSquare.h  Distribution.cpp  Distribution.h  Exponential.cpp  Exponential.h  LbaGen.cpp  LbaGen.h  Pareto.cpp  Pareto.h  PdfFlow.cpp  PdfFlow.h  RandomValue.cpp  RandomValue.h  Request.cpp  Request.h  SizeGen.cpp  SizeGen.h  StackDistance.cpp  StackDistance.h  StackDistanceGen.cpp  StackDistanceGen.h  TimeGen.cpp  TimeGen.h  UniformInt.cpp  UniformInt.h  UniformReal.cpp  UniformReal.h
Cache/Libs/: pugixml.cpp  pugixml.hpp
Cache/Loggers/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  Logger.cpp  Logger.h
Cache/Main/: Config.xml  Main.cpp  ModeRunner.cpp  ModeRunner.h
Cache/Main/Configs/: Analyze.xml  Config.xml  Simulate.xml
Cache/Main/Modes/: AnalyzeMode.cpp  GenerateMode.cpp  ModeRunner.h  SimulateMode.cpp
Cache/Math/: LeastSquareMethod.cpp  LeastSquareMethod.h
Cache/Modeling/: AppClass.cpp  AppClass.h  Client.cpp  Client.h  PartialCache.cpp  PartialCache.h  PlotManager.cpp  PlotManager.h  SharedCache.cpp  SharedCache.h  TraceAnalyzer.cpp  TraceAnalyzer.h
Cache/Modes/: AnalyzeMode.cpp  Gears.cpp  Gears.h  GenerateMode.cpp  ModeRunner.h  SimulateMode.cpp
Cache/Requests/: Request.cpp  Request.h  RequestGenerator.cpp  RequestGenerator.h  RequestParser.cpp  RequestParser.h
Cache/Storages/: DynamicPartial.cpp  DynamicPartial.h  SharedStorage.cpp  SharedStorage.h  StaticPartial.cpp  StaticPartial.h  Storage.cpp  Storage.h
Cache/Utils/: Config.h  DefinedConstants.h  Enums.h  GnuPlot.cpp  GnuPlot.h  Paths.h  Plot.cpp  Plot.h  TraceAnalyzer.cpp  TraceAnalyzer.h  Types.h  Utils.cpp  Utils.h  pugixml.cpp
Cache/Xml/: AnalyzeConfig.cpp  AnalyzeConfig.h  AnalyzerConfig.cpp  AnalyzerConfig.h  Config.cpp  Config.h  GenerateConfig.cpp  GenerateConfig.h  MainConfig.cpp  MainConfig.h  Serializible.h  SimulateConfig.cpp  SimulateConfig.h  XmlConfig.cpp  XmlConfig.h  pugixml.hpp
Cache/Xml/XmlModes/: XmlAnalyzeMode.cpp  XmlAnalyzeMode.h  XmlGenerateMode.cpp  XmlGenerateMode.h  XmlSimulateMode.cpp  XmlSimulateMode.h
Tests/: CMakeLists.txt  Distributions.xlsx  FileFlowTest.cpp  FileFlowTest.h  Flow_Test.cpp  Main.cpp  Pareto_density.txt  Test.cpp  TestConfig.cpp  TestConfig.h  TestDistribution.cpp  TestDistribution.h  TestFlow.cpp  TestFlow.h  Tests.vcxproj  Tests.vcxproj.filters  TraceAnalyzer.cpp  TraceAnalyzer.h
Tests/GenGist/: DistributionGists.ods  PDF.txt
Tests/Gists/WebSearch1/: cdf.plt  pdf.plt
Tests/Gists/WebSearch1/CDF/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+184 more)
Tests/Gists/WebSearch1/CDF/0/: 0.txt  1.txt  2.txt  3.txt  cdf.plt
Tests/Gists/WebSearch1/CDF/1/: 0.txt  1.txt  2.txt  3.txt  5.txt  cdf.plt
Tests/Gists/WebSearch1/CDF/10/: 0.txt  1.txt  2.txt  3.txt  5.txt  cdf.plt
Tests/Gists/WebSearch1/CDF/2/: 0.txt  1.txt  2.txt  5.txt  cdf.plt
Tests/Gists/WebSearch1/CDF/3/: 0.txt  1.txt  2.txt  4.txt  cdf.plt
Tests/Gists/WebSearch1/CDF/4/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  cdf.plt
Tests/Gists/WebSearch1/CDF/5/: 0.txt  1.txt  2.txt  3.txt  5.txt  cdf.plt
Tests/Gists/WebSearch1/CDF/6/: 0.txt  1.txt  2.txt  4.txt  cdf.plt
Tests/Gists/WebSearch1/CDF/7/: 0.txt  1.txt  2.txt  4.txt  cdf.plt
Tests/Gists/WebSearch1/CDF/8/: 0.txt  1.txt  2.txt  3.txt  cdf.plt
Tests/Gists/WebSearch1/CDF/9/: 0.txt  1.txt  2.txt  (+2 more)
Tests/Gists/WebSearch1/PDF/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+184 more)
Tests/Pdf/: pdf.txt  pdf_test.txt
Tests/TestFlow/: TestFlow.cpp  TestFlow.h
Tests/TestFlows/: TestFlow.cpp  TestFlow.h
Tests/TestGenerators/: TestDistribution.cpp  TestDistribution.h
Tests/TestStorages/: TestShared.cpp  TestShared.h  TestStaticPartial.cpp  TestStaticPartial.h
Tests/TraceLogs/: Stat.txt  Stat.xml
Tests/TraceLogs/Financial/: Financial1.txt  Financial1.xml  Financial2.txt  Financial2.xml
Tests/TraceLogs/WebSearch/: WebSearch1.txt  WebSearch1.xml  WebSearch2.xml  WebSearch3.xml
Tests/Traces/Financial/: Financial1.xml
Tests/Traces/WebSearch/: WebSearch2.xml  WebSearch3.xml
Tests/XmlTest/: TestConfig.h
(+237 files in other folders)
